# lib/db/src/schema/index.ts
@@ -4,3 +4,4 @@ export * from "./posts";
 export * from "./bootcamps";
 export * from "./chat";
 export * from "./wallet";
+export * from "./referrals";
